# rust-analytics-plugin

./: Cargo.toml  README.md  SESSION_USAGE.md
examples/: basic_usage.rs
src/: lib.rs
