[package]
name = "game-events-sdk"
version = "0.1.0"
authors = ["Maksim Ustichenko <nix.n0uk@gmail.com>"]
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
derive_builder = "0.20"
reqwest = { version = "0.11", features = ["blocking", "json"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
